# deflate-quine-gen

./: pyproject.toml  quine_gen.py
