[tool.poetry]
name = "deflate-quine-gen"
version = "0.1.0"
description = ""
authors = ["Matthew Barber <quitesimplymatt@gmail.com>"]
license = "BSD-3-Clause"

[tool.poetry.dependencies]
python = "^3.8"
bitstring = "^3.1.7"
coinflip = "^0.1.5"
more-itertools = "^8.7.0"

[tool.poetry.dev-dependencies]
isort = "^5.7.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
